<?xml version="1.0"?>
<package format="3">
  <name>front_cam</name>
  <version>0.0.0</version>
  <description>The front_cam package</description>

  <!-- Maintainer -->
  <maintainer email="shubham@TowardsAutonomy.com">Shubham Shrivastava</maintainer>

  <!--   License -->
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
