<?xml version="1.0"?>
<package format="3">
  <name>jetpilot_msgs</name>
  <version>0.0.0</version>
  <description>The jetpilot_msgs package</description>

  <!-- Maintainer -->
  <maintainer email="shubham@TowardsAutonomy.com">Shubham Shrivastava</maintainer>

  <!-- License -->
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
